Changed Apple App title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Perovskite App">
+    <meta name="apple-mobile-web-app-title" content="ChanSON App">
     <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
     <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
@@ -94,7 +94,7 @@
     </tr>
     <tr>
         <td>
-            Staatl. Einsparungen (Bund + Kommune): 
+            Einsparungen (Bund + Kommune): 
         </td>
         <td>
             <span id = "Einsparungen_G_J1"></span> €
@@ -251,15 +251,13 @@
 
 <br/>
 <br/>
-<a href = "mailto: "
+<a href = "mailto: nuglisch@paritaet-bw.de">
 <button style = "background-color: lightblue; padding:10px">
     <b>Beratung anfordern</b>
 </button>
 </div>
 <script type="text/javascript" src="js/sroi.js"></script>
 <br/><br/>
-
-
 </body>
 
 
